--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "w3bots-landingpage",
+  "name": "pooly-landingpage",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
